Login Language Translation

--- a/web/languages/en-US/general.lang.json
+++ b/web/languages/en-US/general.lang.json
@@ -31,5 +31,28 @@
     "InfoText2": "Please note that your data will be saved only for eApplication on the server.",
     "InfoText3": "All data will be used carefully and only for obvious purpose!",
     "LoadApplication_SelectOpen": "Import Application Data and open it",
-    "FromFile": "from file"
+    "FromFile": "from file",
+    "LoginWith": "Login with ",
+    "LoginTitle": "Sign in with Account",
+    "RegisterTitle": "Register Account",
+    "Login": "Login",
+    "Register": "Register",
+    "LoginWithFacebook": "Login with Facebook",
+    "LoginWithGoogle": "Login with Google",
+    "LoginWithTwitter": "Login with Twitter",
+    "LoginWithGithub": "Login with Github",
+    "LoginWithLinkedIn": "Login with LinkedIn",
+    "LoginWithInstagram": "Login with Instagram",
+    "LoginWithFoursquare": "Login with Foursquare",
+    "LoginWithYahoo": "Login with Yahoo",
+    "LoginWithMicrosoft": "Login with MicrosoftLive",
+    "LoginWithTwitch": "Login with Twitch",
+    "LoginWithBitbucket": "Login with Bitbucket",
+    "LoginWithSpotify": "Login with Spotify",
+    "ForgotPassword": "Forgot password?",
+    "SavePassword": "Remember password",
+    "Password": "Password",
+    "InviteCode": "Invite-Code",
+    "or":"or",
+    "back": "go back"
 }
