--- a/web/languages/de-DE/general.lang.json
+++ b/web/languages/de-DE/general.lang.json
@@ -31,5 +31,28 @@
     "InfoText2": "Bitte beachte dass bei einer eBewerbung deine Daten auf dem Server gespeichert werden.",
     "InfoText3": "Alle Daten werden nur zum offensichtlichen Zwecke genutzt!",
     "LoadApplication_SelectOpen": "Bewerbungsmappe importieren und öffnen",
-    "FromFile": "von Datei"
+    "FromFile": "von Datei",
+    "LoginWith": "Login mit ",
+    "LoginTitle": "Mit Account anmelden",
+    "RegisterTitle": "Account registrieren",
+    "Login": "Anmelden",
+    "Register": "Registrieren",
+    "LoginWithFacebook": "Login mit Facebook",
+    "LoginWithGoogle": "Login mit Google",
+    "LoginWithTwitter": "Login mit Twitter",
+    "LoginWithGithub": "Login mit Github",
+    "LoginWithLinkedIn": "Login mit LinkedIn",
+    "LoginWithInstagram": "Login mit Instagram",
+    "LoginWithFoursquare": "Login mit Foursquare",
+    "LoginWithYahoo": "Login mit Yahoo",
+    "LoginWithMicrosoft": "Login mit MicrosoftLive",
+    "LoginWithTwitch": "Login mit Twitch",
+    "LoginWithBitbucket": "Login mit Bitbucket",
+    "LoginWithSpotify": "Login mit Spotify",
+    "ForgotPassword": "Passwort vergessen?",
+    "SavePassword": "Passwort speichern",
+    "Password": "Passwort",
+    "InviteCode": "Einladungs-Code",
+    "or":"oder",
+    "back": "Zurück"
 }
